[plugin advertiser] deprecated API usages removed; J2K conversion cleanups
GitOrigin-RevId: 5bc5a598b0d9be41713e591b0409f6717438ba99